--- a/Odin/Content/styles/scss/4_components/datetimepicker.scss
+++ b/Odin/Content/styles/scss/4_components/datetimepicker.scss
@@ -13,8 +13,8 @@
     border-radius: 50%;
 }
 
-.bootstrap-datetimepicker-widget .picker-switch table.table-condensed td a span:hover {
+/*.bootstrap-datetimepicker-widget .picker-switch table.table-condensed td a span:hover {
     background-image: url(../../Images/check.png);
     background-repeat: no-repeat;
     background-position: center;
-}
+}*/
