--- a/Odin/Content/styles/scss/refactor/itineraryPdf.scss
+++ b/Odin/Content/styles/scss/refactor/itineraryPdf.scss
@@ -1,26 +1,15 @@
-﻿ul.thumbnails-carousel li img {
-    max-width: 6rem !important;
+﻿@import "./definitions.scss";
+
+html{
+    background-color: white;
 }
 
-.img-responsive {
-    height: 32rem !important;
-    width: 55rem;
-}
-
-img li.thumbnails-carousel, img.location {
-    width: 5rem;
-    height: 3rem;
-}
-
-.glyphicon-chevron-left {
-    margin-left: -4.2rem !important;
-}
-
-.glyphicon-chevron-right {
-    margin-right: -4.2rem !important;
+body{
+    background-color:white;
 }
 
 div#itinerary {
+
     .sectionList {
         list-style: none;
         margin: 0;
@@ -115,19 +104,19 @@ div#itinerary {
         font-size: 1.8rem;
         color: #4E4E4E;
         font-weight: 300;
-        margin: 0px;
         padding: 0;
-        line-height: 2rem;
+        line-height: 26px;
+
     }
 
     .eventTime {
         font-size: 1.8rem;
         color: #A7CE39;
         font-weight: 500;
-        margin: 0px;
         padding: 0;
         color: $DW_Green;
-        line-height: 2rem;
+        line-height: 26px;
+
     }
 
     @media screen and (min-width: 48rem) {
@@ -137,20 +126,24 @@ div#itinerary {
             }
         }
     }
-}
-.sectionList li.noteEntry {
-    line-height: 1rem;
-    margin-bottom: 0rem;
-}
-.noteRow{
-    cursor:pointer;
-}
-.modal-content {
-    padding: 2rem;
 
-    .close {
-        position: absolute;
-        top: 3rem;
-        right: 3rem;
+
+    .sectionList li.noteEntry {
+        line-height: 26px;
+        margin-bottom: 1rem;
+    }
+
+    .noteRow {
+        cursor: pointer;
+    }
+
+    .modal-content {
+        padding: 2rem;
+
+        .close {
+            position: absolute;
+            top: 3rem;
+            right: 3rem;
+        }
     }
 }
