--- a/Odin/Content/styles/scss/application.scss
+++ b/Odin/Content/styles/scss/application.scss
@@ -1,4 +1,4 @@
-﻿@import "./ref_definitions.scss";
+﻿@import "./refactor/definitions.scss";
 @import "./3_elements/body.scss";
 @import "./4_components/datetimepicker.scss";
 @import "./4_components/primaryNav.scss";
