Added Test, refactered some

--- a/Odin/Views/Orders/Partials/_Housing.cshtml
+++ b/Odin/Views/Orders/Partials/_Housing.cshtml
@@ -7,7 +7,7 @@
             <div id="map" data-lat="@Model.Latitude" data-lng="@Model.Longitude"></div>
         </div>
         <div class="col-md-4 col-md-pull-8">
-            <h1 class="sectionTitle">Housing Summary</h1>
+            <h1 id="housingsectionTitle" class="sectionTitle">Housing Summary</h1>
             <ul class="row sectionList">
                 <li class="col-md-6">
                     <label>@Html.DisplayNameFor(model => model.HousingBudget)</label>
