--- a/Odin/Views/Orders/Partials/_SelectedProperty.cshtml
+++ b/Odin/Views/Orders/Partials/_SelectedProperty.cshtml
@@ -2,7 +2,7 @@
 <div class="container-fluid" data-property-id="@Model.Id">
     <div class="row">
         <div class="col-md-6">
-            <h3>
+            <h3 id="housingsectionTitle">
                 Selected Home
             </h3>
             <p>&nbsp;</p>
