Added Source URL button and working

--- a/Odin/Content/css/transferee/housing.css
+++ b/Odin/Content/css/transferee/housing.css
@@ -110,6 +110,9 @@ ul.thumbnails-carousel li img {
   text-align: center;
   margin-top: 2rem; }
 
+.btn-toolbar > .housingPropertyModal__viewPost {
+  margin-left: 1.2rem; }
+
 #housingFilter {
   margin: 0;
   padding: 0; }
