--- a/Odin/Content/css/transferee/housing.scss
+++ b/Odin/Content/css/transferee/housing.scss
@@ -89,6 +89,9 @@ ul.thumbnails-carousel li img {
     margin-top: 2rem;
 }
 
+.btn-toolbar > .housingPropertyModal__viewPost{
+    margin-left: 1.2rem;
+}
 
 #housingFilter {
     margin: 0;
