--- a/Odin/Views/Orders/Partials/_PropertyDetails.cshtml
+++ b/Odin/Views/Orders/Partials/_PropertyDetails.cshtml
@@ -3,8 +3,6 @@
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
     <h5 class="modal-title"><strong>Available on:</strong> @Html.DisplayFor(model => model.PropertyAvailabilityDate)</h5>
-    <a href="@Model.PropertySourceUrl" target = "_blank">Source Url</a>
-  
 </div>
 
 
@@ -19,11 +17,11 @@
                         <p>@Html.DisplayFor(model => model.ViewingDate)</p>
                     </li>
                 }
-                    <li class="housingPropertyModal__propAddress">
-                        <label>@Html.DisplayNameFor(model => model.PropertyAddress)</label>
-                        <p>@Html.DisplayFor(model => model.PropertyAddress)</p>
-                        
-                    </li>
+                <li class="housingPropertyModal__propAddress">
+                    <label>@Html.DisplayNameFor(model => model.PropertyAddress)</label>
+                    <p>@Html.DisplayFor(model => model.PropertyAddress)</p>
+
+                </li>
 
                 <li class="housingPropertyModal__propBedrooms hpm_edit">
                     <label>@Html.DisplayNameFor(model => model.PropertyNumberOfBedrooms)</label>
@@ -41,7 +39,7 @@
                 <li class="housingPropertyModal__propSquarefootage hpm_edit">
                     <label>@Html.DisplayNameFor(model => model.PropertySquareFootage)</label>
                     <p class="prop-span">@Html.DisplayFor(model => model.PropertySquareFootage)</p>
-                    @Html.TextBoxFor(model => @Model.PropertySquareFootage, new { @class = "form-control intake-input"})
+                    @Html.TextBoxFor(model => @Model.PropertySquareFootage, new { @class = "form-control intake-input" })
                     @Html.HiddenFor(model => @Model.PropertySquareFootage, new { @class = "housingDetails-hidden" })
                 </li>
                 <li class="housingPropertyModal__propAmount hpm_edit">
@@ -52,8 +50,13 @@
                 </li>
 
             </ul>
-
-            <button type="button" id="editProperty" class="btn btn-secondary housingPropertyModal__edit">EDIT</button>
+            <div class="btn-toolbar">
+                <button type="button" id="editProperty" class="btn btn-secondary housingPropertyModal__edit">EDIT</button>
+                @if (Model.PropertySourceUrl != null)
+                {
+                    <button type="button" id="sourceUrl" class="btn btn-secondary housingPropertyModal__viewPost" onclick="window.open('@Model.PropertySourceUrl')">View Posting</button>
+                }
+            </div>
             <div class="row housingPropertyModal__likeDislike">
                 <div class="col-md-12">
                     @Html.EditorFor(model => model.Liked, new { propertyId = Model.Id })
