Added Edit Selected prop test

--- a/Odin/Views/Orders/Partials/_SelectedProperty.cshtml
+++ b/Odin/Views/Orders/Partials/_SelectedProperty.cshtml
@@ -112,21 +112,21 @@
             <div class="modal-body row inputRow">
                 <div class="col-md-6">
                     <label for="bedrooms">Bedrooms</label>
-                    <input type="number" name="bedrooms" value="@Model.PropertyNumberOfBedrooms" />
+                    <input type="number" name="bedrooms" id="editBedrooms" value="@Model.PropertyNumberOfBedrooms" />
                 </div>
                 <div class="col-md-6">
                     <label for="bathrooms">Bathrooms</label>
-                    <input type="number" name="bathrooms" value="@Model.PropertyNumberOfBathrooms" />
+                    <input type="number" name="bathrooms" id="editBathrooms" value="@Model.PropertyNumberOfBathrooms" />
                 </div>
             </div>
             <div class="modal-body row inputRow">
                 <div class="col-md-6">
                     <label for="squarefeet">Square feet</label>
-                    <input type="number" name="squarefeet" value="@Model.PropertySquareFootage" />
+                    <input type="number" name="squarefeet" id="editSquarefeet" value="@Model.PropertySquareFootage" />
                 </div>
                 <div class="col-md-6">
                     <label for="cost">Monthly Cost</label>
-                    <input type="number" name="cost" value="@Model.PropertyAmount" />
+                    <input type="number" name="cost" id="editCost" value="@Model.PropertyAmount" />
                 </div>
             </div>
 
