Source URL fixed

--- a/Odin/Views/Orders/Partials/_PropertyDetails.cshtml
+++ b/Odin/Views/Orders/Partials/_PropertyDetails.cshtml
@@ -3,7 +3,7 @@
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
     <h5 class="modal-title"><strong>Available on:</strong> @Html.DisplayFor(model => model.PropertyAvailabilityDate)</h5>
-    @if (Model.PropertySourceUrl != null)
+    @if (Model.PostUrl != null && Model.PostUrl != "")
     {
         <span><a href="@Model.PropertySourceUrl" target="_blank">Posted From @Model.PostUrl >></a></span>
     }
