--- a/Odin/Views/Orders/Partials/_TransfereeSideNav.cshtml
+++ b/Odin/Views/Orders/Partials/_TransfereeSideNav.cshtml
@@ -31,26 +31,26 @@
             <li class="item selected nav-item" data-panel="dashboard">
                 <a href="#dashboard">
                     <img src="~/Content/Images/icn_details.png"/>
-                    <label>Dashboard</label>
+                    <span>Dashboard</span>
                 </a>
             </li>
             <li class="item nav-item" data-panel="housing">
                 <a href="#housing">
                     <img src="~/Content/Images/icn_housing.png"/>
-                    <label>Housing</label>
+                    <span>Housing</span>
                 </a>
             </li>
             <li class="item nav-item" data-panel="itinerary">
                 <a href="#itinerary">
                     <img src="~/Content/Images/icn_internal_itinerary.png"/>
-                    <label>Itinerary</label>
+                    <span>Itinerary</span>
                 </a>
             </li>
             <hr class="transfereeSideNav__rule"/>
             <li class="item nav-item" data-panel="help">
                 <a href="#help">
                     <img src="~/Content/Images/icn_internal_itinerary.png"/>
-                    <label>Help / FAQ</label>
+                    <span>Help / FAQ</span>
                 </a>
             </li>
         </ul>
