Refactoring and testing in prep for master merge.

--- a/Odin/Content/styles/scss/4_components/primaryNav.scss
+++ b/Odin/Content/styles/scss/4_components/primaryNav.scss
@@ -157,7 +157,7 @@ a.dw_logo {
 
     @media screen and (min-width: 40rem) {
         right: 0;
-        left: initial;
+        left: auto;
         width: 400px;
     }
 }
@@ -167,7 +167,7 @@ a.dw_logo {
 .notification-dropdown > li.notifications_unread {
     border-bottom: solid;
     width: 100%;
-    border-bottom-color: lightgray;
+    border-bottom-color: darkgray;
     border-bottom-width: medium;
     background-image: url('/Content/Images/icn_attention.png');
     background-size: 90px;
@@ -197,6 +197,40 @@ a.dw_logo {
     color: #999;
 }
 
+.notification-dropdown > li.notifications_unread_message {
+    border-bottom: solid;
+    width: 100%;
+    border-bottom-color: darkgray;
+    border-bottom-width: medium;
+    background-image: url('/Content/Images/icn_msg.png');
+    background-size: 90px;
+    background-repeat: no-repeat;
+    padding-left: 100px;
+    text-wrap: none;
+    height: 90px;
+    display: inline-block;
+    content: "x";
+    color: #999;
+    background-color: lightgray;
+}
+
+.notification-dropdown > li.notifications_read_message {
+    border-bottom: solid;
+    width: 100%;
+    border-bottom-color: lightgray;
+    border-bottom-width: medium;
+    background-image: url('/Content/Images/icn_msg.png');
+    background-size: 90px;
+    background-repeat: no-repeat;
+    padding-left: 100px;
+    text-wrap: none;
+    height: 90px;
+    display: inline-block;
+    content: "x";
+    color: #999;
+}
+
+
 .notification-close-read {
     display: block;
 }
@@ -222,5 +256,4 @@ a.dw_logo {
 #logoutForm {
     display: none;
 }
-
 
