--- a/Odin/Content/styles/scss/application.scss
+++ b/Odin/Content/styles/scss/application.scss
@@ -1,4 +1,11 @@
-﻿@import "./refactor/definitions.scss";
+﻿//Import libs
+@import "./0_libs/bootstrap-paper.scss";
+@import "./0_libs/bootstrap-datetimepicker.scss";
+@import "./0_libs/animate.scss";
+@import "./0_libs/typeahead.scss";
+
+//Import custom
+@import "./refactor/definitions.scss";
 @import "./3_elements/body.scss";
 @import "./4_components/datetimepicker.scss";
 @import "./4_components/primaryNav.scss";
