--- a/Odin/Content/styles/scss/refactor/transferee.scss
+++ b/Odin/Content/styles/scss/refactor/transferee.scss
@@ -10,3 +10,4 @@
 @import "./transferee/help.scss";
 @import "./transferee/propertyMessages.scss";
 @import "./transferee/dashboard.scss";
+@import "./transferee/selectedProperty.scss";
