Removed Site.css and itinerary semicolon

--- a/Odin/Views/Orders/Partials/_Itinerary.cshtml
+++ b/Odin/Views/Orders/Partials/_Itinerary.cshtml
@@ -146,7 +146,7 @@
 </div>
    
 
-@Styles.Render("~/Styling/itinerary");
+@Styles.Render("~/Styling/itinerary")
 
 <script type="text/javascript">
     $(document).ready(function () {
