Changed verbiage on itinerary

--- a/Odin/Views/PDF/PDFItinerary.cshtml
+++ b/Odin/Views/PDF/PDFItinerary.cshtml
@@ -16,7 +16,7 @@
                 </style>
            
             <p class="sectionInstruction">
-                What is going on. Check to see what you have planned. To stay on top of things.
+                Stay organized with this detailed, mobile-friendly itinerary.
             </p>
         </div>
        <div class="col-md-6"></div>       
