--- a/Odin/Views/Orders/Partials/_Itinerary.cshtml
+++ b/Odin/Views/Orders/Partials/_Itinerary.cshtml
@@ -8,7 +8,7 @@
                     Your Itinerary
            </h1>
            <p class="sectionInstruction">
-                What is going on. Check to see what you have planned. To stay on top of things.
+                Stay organized with this detailed, mobile-friendly itinerary.
             </p>
         </div>
         
