20 successfull tests and 6 ignored

--- a/Odin/Views/Orders/Partials/_Details.cshtml
+++ b/Odin/Views/Orders/Partials/_Details.cshtml
@@ -97,7 +97,7 @@
     }     -->
 
     <div class="details-services" data-block="services">
-        <h1 class="sectionTitle">
+        <h1 id="sectionTitle" class="sectionTitle">
             Service Reporting
             <span class="sectionSave">
                 - Save
